apps/racknerd/staging-cluster-proxy/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: staging-cluster-proxy
  labels:
    public-gateway: "true"
