apps/racknerd/staging-cluster-proxy/backend.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: staging-lan-gateway
  namespace: staging-cluster-proxy
spec:
  type: ClusterIP
  ports:
    - port: 443
      protocol: TCP
      targetPort: 443
---
apiVersion: v1
kind: Endpoints
metadata:
  name: staging-lan-gateway
  namespace: staging-cluster-proxy
subsets:
  - addresses:
      - ip: 10.0.150.50
    ports:
      - port: 443
        protocol: TCP
