apps/racknerd/staging-cluster-proxy/route.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: staging-cluster-proxy
  namespace: staging-cluster-proxy
spec:
  parentRefs:
    - name: https-gateway
      namespace: public-gateway
      sectionName: raymondcollazo-https
  hostnames:
    - "*.raymondcollazo.com"
  rules:
    - backendRefs:
        - name: staging-lan-gateway
          port: 443
